--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
     "test": "echo \"No test specified\" && exit 0",
-    "heroku-postbuild": "npm install --only=dev --no-shrinkwrap && npm run build"
+    "heroku-postbuild": "npm install --only=dev --no-shrinkwrap && npm run build",
+    "build": "quasar build",
+    "start": "node server.js",
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
