--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"No test specified\" && exit 0",
     "serve": "quasar serve dist/pwa",
     "dev": "quasar dev",
-    "build": "quasar build -m pwa",
+    "build": "quasar build build -m pwa",
     "start": "node server.js"
   },
   "dependencies": {
@@ -23,12 +23,13 @@
     "vue-i18n": "^8.0.0"
   },
   "devDependencies": {
+    "@quasar/app": "^2.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^7.21.0",
-    "eslint-webpack-plugin": "^2.4.0",
-    "eslint-plugin-vue": "^7.7.0",
     "eslint-config-prettier": "^8.1.0",
-    "@quasar/app": "^2.0.0"
+    "eslint-plugin-vue": "^7.7.0",
+    "eslint-webpack-plugin": "^2.4.0",
+    "workbox-webpack-plugin": "^5.1.4"
   },
   "browserslist": [
     "last 10 Chrome versions",
