--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "echarts": "^5.3.2",
+    "express": "^4.18.1",
     "quasar": "^1.0.0",
+    "serve-static": "^1.15.0",
     "vue-echarts-v3": "^2.0.1",
     "vue-i18n": "^8.0.0"
   },
