--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"No test specified\" && exit 0",
     "serve": "quasar serve dist/pwa",
     "dev": "quasar dev",
-    "build": "quasar build build -m pwa",
+    "build": "quasar build -m pwa",
     "start": "node server.js"
   },
   "dependencies": {
